--- a/app/src/main/res/layout/activity_aboutme.xml
+++ b/app/src/main/res/layout/activity_aboutme.xml
@@ -10,7 +10,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/AccouuntDetailCard"
         android:layout_width="325dp"
-        android:layout_height="270dp"
+        android:layout_height="280dp"
         android:backgroundTint="#cdeac7"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
                     android:ems="10"
                     android:fontFamily="@font/satoshiblack"
                     android:inputType="textPersonName"
-                    android:text="Name:"
+                    android:text="Name            :"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
@@ -63,24 +63,25 @@
             </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
             android:layout_marginBottom="10dp">
+
             <TextView
                 android:id="@+id/EmailText"
                 android:layout_width="140dp"
-                android:layout_height="36dp"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:fontFamily="@font/satoshiblack"
                 android:inputType="textEmailAddress"
-                android:text="Email:"
+                android:text="Email             :"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/EmailFillText"
-                android:layout_width="325dp"
-                android:layout_height="34dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:fontFamily="@font/satoshiblack"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -90,6 +91,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
+
             <TextView
                 android:id="@+id/BalanceText"
                 android:layout_width="140dp"
@@ -97,7 +99,7 @@
                 android:ems="10"
                 android:fontFamily="@font/satoshiblack"
                 android:inputType="textPersonName"
-                android:text="Balance:"
+                android:text="Balance         :"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -242,6 +244,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/button_rounded"
+                    android:fontFamily="@font/satoshiblack"
                     android:text="Register"
                     android:textColor="@color/black" />
 
@@ -262,7 +265,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/RegisterDetailCard"
         android:layout_width="325dp"
-        android:layout_height="300dp"
+        android:layout_height="305dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="#cdeac7"
         android:visibility="visible"
@@ -302,7 +305,7 @@
                     android:ems="10"
                     android:fontFamily="@font/satoshiblack"
                     android:inputType="textPersonName"
-                    android:text="Name:"
+                    android:text="Name            :"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
@@ -317,25 +320,25 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:layout_marginBottom="10dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/AddressText"
-                    android:layout_width="124dp"
+                    android:layout_width="146dp"
                     android:layout_height="36dp"
                     android:ems="10"
                     android:fontFamily="@font/satoshiblack"
                     android:inputType="text"
-                    android:text="Address:"
+                    android:text="Address        :"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/AddressFillText"
-                    android:layout_width="331dp"
-                    android:layout_height="34dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:fontFamily="@font/satoshiblack"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -343,25 +346,24 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:orientation="vertical">
+                android:layout_height="80dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/PhoneNumberText"
-                    android:layout_width="match_parent"
+                    android:layout_width="146dp"
                     android:layout_height="36dp"
                     android:ems="10"
                     android:fontFamily="@font/satoshiblack"
                     android:inputType="textPersonName"
-                    android:text="Phone Number:"
+                    android:text="Phone           :"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/PhoneNumberFillText"
-                    android:layout_width="327dp"
-                    android:layout_height="36dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:fontFamily="@font/satoshiblack"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -370,7 +372,8 @@
             <LinearLayout
                 android:layout_width="325dp"
                 android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="5dp">
 
                 <Button
                     android:id="@+id/PaymentList"
