--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,5 +105,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/backleaf" />
 
+    <ImageView
+        android:id="@+id/exit"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:alpha="0.3"
+        android:background="@drawable/circle"
+        android:rotation="180"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        app:srcCompat="@drawable/ic_baseline_cancel_24"
+        app:tint="#658354" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
