--- a/app/src/main/res/layout/custom_list_adapter.xml
+++ b/app/src/main/res/layout/custom_list_adapter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,39 +9,33 @@
     android:padding="10dp"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/room_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/ic_baseline_home_24"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
     <TextView
         android:id="@+id/room_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/satoshiblack"
+        android:text="Room"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/room_icon"
-        android:text="Room"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/room_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/satoshiblack"
+        android:text="Room 1"
+
         android:textColor="@color/colorPrimaryVariant"
         android:textSize="14sp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/room_name"
-        app:layout_constraintStart_toEndOf="@+id/room_icon"
-        android:text="Room 1"/>
+        app:layout_constraintStart_toEndOf="@+id/room_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
